# GrayScottLab

./: README.md  generate_pics.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py
reaction_diffusion/: __init__.py  colormaps.py  controls.py  presets.py  renderer.py  simulation.py  simulation_taichi.py  ui.py  utils.py
tests/: test_colormaps.py  test_presets.py  test_simulation.py  test_simulation_taichi.py  test_ui.py  test_utils.py
